# gautschiIntegrators

./: .flake8  .gitignore  License.txt  README.md  environment.yml  pyproject.toml
examples/: FPUTMultiFrequency.py  FPUTMultiFrequencyLanczos.py  FPUTMultiFrequencyLanczosLonger.py  FermiPastaUlamTsingou.py  fermipastamulti.py
gautschiIntegrators/: __init__.py  base.py  integrate.py  matrix_functions.py  one_step.py  two_step.py
gautschiIntegrators/lanczos/: ArnoldiProvider.py  LanczosDiagonalizationEvaluator.py  LanczosEvaluator.py  LanczosProvider.py  error_bounds.py  krylov_basis.py
tests/: fermipasta.py  test_large_sparse.py  test_linear.py  test_nonlinear.py  test_solve_ivp.py  utils.py
