[tool.black]
line-length = 120
target-version = ['py312']

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name='gautschiIntegrators'
version = "0.0.1"
dependencies = [
    "numpy",
    "scipy",
    "pywkm"
]
authors = [
    {name = "Henri Willems", email = "henri2@gmx.de"}
]
description='A package for integrating oscillating second order differential equations'
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters